--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-CLOUD_NAME = dgh3jyahd
-API_KEY = 899824998773763
-API_SECRET = 9YBBOj1_g_KACe98cIkcTd_g3Ng 
-MONGODB_URL = "mongodb+srv://pjkkulkarnipiyush:5vuOOEc3Tke6cqri@cluster0.d3yij0u.mongodb.net/FileUploadDB"
-PORT  = 4000
+CLOUD_NAME = 
+API_KEY = 
+API_SECRET = 
+MONGODB_URL = 
+PORT  = 
 MAIL_HOST = smtp.gmail.com
-MAIL_USER =  pjkkulkarnipiyush@gmail.com
-MAIL_PASS = mjrsshuiukiwyvim
+MAIL_USER =  
+MAIL_PASS = 
